fixing alignments

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,11 +4,11 @@
     --accent1-color:#829298;
     --accent2-color:#94778B;
     --heading-font: "Lato", sans-serif;
-    --body-font: "Outfit", sans-serif;
+    --body-font: "outfit", sans-serif;
 }
 *{
-    margin: 0;
-    padding: 0;
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 body{
@@ -18,11 +18,10 @@ body{
 header,main,footer{
     width: 400px;
     margin: 0 auto;
-    
 }
 h1,h2{
-    font-family:var(--heading-font);
-    color:var(--primary-color)
+    font-family: var(--heading-font);
+    color: var(--primary-color);
 }
 nav,p,section,article{
     margin: 16px;
@@ -45,9 +44,9 @@ h1{
     top: 20px;
     width: 100%;
     padding: 150px;
-    text-align: left;
+    text-align:left;
     opacity: 0.7;
-    
+    justify-content: space-around;
 }
 article{
     position: absolute;
@@ -56,17 +55,17 @@ article{
     text-align: right;
     color: black;
     
-    
 }
-.hero article img{
+article img{
     float: right;
-    width: 125px;
+    width: 100px;
+    justify-content: space-around;
+    background-image: var(--primary-color);
+    color: var(--accent2-color);
+}
+article p{
+    text-align: left;
 }
 
-    
-    
-    
-    
-    
-    
-    
+
+
